Refactor tests and continue with the backend